Fixed build to be working properly

--- a/app/assets/css/styles.scss
+++ b/app/assets/css/styles.scss
@@ -7,5 +7,6 @@ $Imports
 ------------------------------*/
 
 @import "foundation/components/grid";
-@import "index.scss"
+@import "index.scss";
+@import "reset.scss"
 
