Add rough signup page

--- a/app/assets/templates/register.hbs
+++ b/app/assets/templates/register.hbs
@@ -25,4 +25,15 @@
 		</form>
 
 	</div>
+
+	<div class="col_2">
+			<h4>Welcome!</h4>
+			<p>Do what you do</p>
+
+			<h4>Cool quiz is next</h4>
+			<p>please</p>
+
+			</div>
+		
+	</div>
 	<!-- end grid -->
