Add remaining views cleanup routes.js

--- a/app/assets/templates/register.hbs
+++ b/app/assets/templates/register.hbs
@@ -1,14 +1,20 @@
 <div class="grid">
 
-	<h1 class="largeHeader">Sign up</h1>
-	<p class="centeredDescription col_4">Already signed up? You can <a href="/login">log in here.</a></p>
+	<h1 class="largeHeader">Registration</h1>
+	<p class="centeredDescription col_4">Already registered? You can <a href="/login">log in here.</a></p>
 	<p class="flash">{{message}}</p>
 
 	<div class="col_2">
 
 		<form id="signupForm" action="/signup" method="post">
 
-			<label for="name">Full name</label><br>
+			<label for="name">First name</label><br>
+			<input class="shortInput" name="name" id="name" type="text"><br>
+
+			<label for="name">Last name</label><br>
+			<input class="shortInput" name="name" id="name" type="text"><br>
+
+			<label for="name">User name</label><br>
 			<input class="shortInput" name="name" id="name" type="text"><br>
 
 			<label for="email">Email</label><br>
@@ -20,20 +26,11 @@
 			<label for="confirmPassword">Confirm password</label><br>
 			<input type="password" name="confirmPassword" class="shortInput" id="confirmPassword" type="text"><br>
 
-			<button type="submit" class="button createAccount">Create account</button>
+			<button type="submit" class="button register"><a href= "/survey">Register<a></button>
 
 		</form>
 
 	</div>
 
-	<div class="col_2">
-			<h4>Welcome!</h4>
-			<p>Do what you do</p>
-
-			<h4>Cool quiz is next</h4>
-			<p>please</p>
-
-			</div>
-		
-	</div>
+</div>
 	<!-- end grid -->
