Add shindig list view template, Modify package.json and server.js for passport and terminal logging

--- a/app/assets/templates/survey.hbs
+++ b/app/assets/templates/survey.hbs
@@ -3,7 +3,7 @@
 	<h1 class="largeHeader">Survey</h1>
 	
 	<p class="flash">{{message}}</p>
-
+  <p class="user_name">{{userName}}</p>
 	<div class="small-12 column" id="log"></div>
 
   <div class="row">
@@ -38,7 +38,7 @@
   </div>
 
   <div>
-    <button id="quiz submit"><a href="/shindig">Submit Your Answers</a></button>
+    <button id="quiz submit">Submit Your Answers</button>
   </div>
 
 </div>
