Add passport user registation

--- a/app/assets/templates/index.hbs
+++ b/app/assets/templates/index.hbs
@@ -27,7 +27,7 @@
 	</div><!-- end grid -->
 
 	<div class="mainContent">
-
+	<h2>{{username}}</h2>
   	<!-- handlebars sub templates -->
 		{{>content}}
 
