--- a/app/assets/templates/register.hbs
+++ b/app/assets/templates/register.hbs
@@ -6,16 +6,16 @@
 
 	<div class="col_2">
 
-		<form id="signupForm" action="/signup" method="post">
+		<form id="signupForm" action="/register" method="post">
 
 			<label for="name">First name</label><br>
-			<input class="shortInput" name="firstName" id="firstName" type="text"><br>
+			<input class="shortInput" name="first_name" id="first_name" type="text"><br>
 
 			<label for="name">Last name</label><br>
-			<input class="shortInput" name="lastName" id="lastName" type="text"><br>
+			<input class="shortInput" name="last_name" id="last_name" type="text"><br>
 
 			<label for="name">User name</label><br>
-			<input class="shortInput" name="userName" id="userName" type="text"><br>
+			<input class="shortInput" name="displayName" id="displayName" type="text"><br>
 
 			<label for="email">Email</label><br>
 			<input class="shortInput" name="email" id="email" type="text"><br>
@@ -26,7 +26,7 @@
 			<label for="confirmPassword">Confirm password</label><br>
 			<input type="password" name="confirmPassword" class="shortInput" id="confirmPassword" type="text"><br>
 
-			<button type="submit" class="button register">Register</button>
+			<button type="submit" class="button_register">Register</button>
 
 		</form>
 
