--- a/app/assets/templates/shindigList.hbs
+++ b/app/assets/templates/shindigList.hbs
@@ -1,3 +1,5 @@
+<p>{{message}}</p>
+<h2 class="user_name">Welcome {{username}}</h2>
 <p class="date_time">{{date}} {{time}}<p>
 <p class="location">{{location}}</p>
 <p class="title">{{title}}</p>
