--- a/app/assets/templates/index.hbs
+++ b/app/assets/templates/index.hbs
@@ -11,23 +11,36 @@
 
 </head>
 <body>
-
-<div class="container">
-
-	<div class="grid">
+<div class="grid">
 
 	<div class="header col_4 cf">
 
 		<div class="logo">
-		<a href=""><img src="images/shindig_logo.png" alt="Our Agenda App Logo"/></a>
+		<a href=""><img src="images/shindig_logo.png" alt="Shindig logo"/></a>
 		</div><!-- end logo -->
 
 	</div><!-- end header -->
 
 	</div><!-- end grid -->
 
+<div class="container">
+	<!-- want to use Coquette Regular here -->
+    <h2 id="shindig">Shindig</h2>
+
+    <div class="small-12 large-12 column" id="log"></div>
+
+    <div class="row">
+
+      <div class="small-12 large-12 column">
+
+        <p>Meet people like you doing the stuff you do.</p>
+
+      </div>
+
+    </div>
+	
 	<div class="mainContent">
-	<h2>{{username}}</h2>
+	<h2>{{message}}</h2>
   	<!-- handlebars sub templates -->
 		{{>content}}
 
