--- a/app/assets/scss/styles.scss
+++ b/app/assets/scss/styles.scss
@@ -7,6 +7,8 @@ $Imports
 ------------------------------*/
 
 @import "../../../bower_components/foundation/scss/foundation/components/grid";
-@import "index.scss";
+@import "general.scss";
 @import "reset.scss";
-
+@import "layout.scss";
+@import "types.scss";
+@import "app.scss";
