--- a/app/assets/templates/shindig.hbs
+++ b/app/assets/templates/shindig.hbs
@@ -1,4 +1,5 @@
-<p class="date_time">{{date}} {{time}}<p>
+<p class="title">{{title}}</p>
+<p class="date_time">{{date}} {{time}}</p>
 <p class="location">{{location}}</p>
 <p class="title">{{title}}</p>
 <p class="description">{{description}}</p>
