Add new event features

--- a/app/assets/templates/shindig.hbs
+++ b/app/assets/templates/shindig.hbs
@@ -1,6 +1,6 @@
 <p class="title">{{title}}</p>
+<p class="owner">{{owner}}</p>
 <p class="date_time">{{date}} {{time}}</p>
 <p class="location">{{location}}</p>
-<p class="title">{{title}}</p>
 <p class="description">{{description}}</p>
 <p class="participants">{{participants}}</p>
