--- a/app/assets/templates/shindigList.hbs
+++ b/app/assets/templates/shindigList.hbs
@@ -5,3 +5,4 @@
 <p class="title">{{title}}</p>
 <p class="description">{{description}}</p>
 <p class="participants">{{participants}}</p>
+<button class"new_shindig"><a href="newshindig">New Shindig</a></button>
