--- a/app/assets/templates/index.hbs
+++ b/app/assets/templates/index.hbs
@@ -8,7 +8,12 @@
 
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="css/styles.css" type="css/text" />
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
+	</script>
+	<script src="http://documentcloud.github.com/underscore/underscore-min.js">
+	</script>
+	<script src="http://documentcloud.github.com/backbone/backbone-min.js">
+	</script>
 </head>
 <body>
 
