Fix password shown at login issue

--- a/app/assets/templates/login.hbs
+++ b/app/assets/templates/login.hbs
@@ -5,7 +5,7 @@
         <p class="flash">{{message}}</p>
         <form action = "/login" method = "post">
           <input type="text" id="email" name="email" placeholder="Email or Username">
-          <input type="text" id="password" name="password" placeholder="Password">
+          <input type="password" id="password" name="password" placeholder="Password">
           <button type="submit" class="login_button">Go!</button>
         </form>
         <button><a href="/register">Join</a></button>
