Broken RegisterView, still working on it

--- a/app/assets/templates/register.hbs
+++ b/app/assets/templates/register.hbs
@@ -6,22 +6,22 @@
 	<form id="signupForm" action="/register" method="post">
 
 		<label for="name">First name</label><br>
-		<input class="shortInput" name="first_name" id="first_name" type="text"><br>
+		<input class="shortInput" name="firstName" id="first_name" type="text"><br>
 
 		<label for="name">Last name</label><br>
-		<input class="shortInput" name="last_name" id="last_name" type="text"><br>
+		<input class="shortInput" name="lastName" id="last_name" type="text"><br>
 
 		<label for="name">Display name</label><br>
-		<input class="shortInput" name="display_name" id="displayName" type="text"><br>
+		<input class="shortInput" name="displayName" id="displayName" type="text"><br>
 
 		<label for="email">Email</label><br>
 		<input class="shortInput" name="email" id="email" type="text"><br>
 
-		<label for="password">Pass</label><br>
-		<input type="password" name="password" class="shortInput" id="password" type="text"><br>
+		<label for="password">Password</label><br>
+		<input name="password" class="shortInput" id="password" type="text"><br>
 
 		<label for="confirmPassword">Confirm password</label><br>
-		<input type="password" name="confirmPassword" class="shortInput" id="confirmPassword" type="text"><br>
+		<input name="confirmPassword" class="shortInput" id="confirmPassword" type="text"><br>
 
     <p>Answer these questions to find local events that fit your interests.</p>
 
