Add log out button

--- a/app/assets/templates/index.hbs
+++ b/app/assets/templates/index.hbs
@@ -22,6 +22,7 @@
   <div id="banner">
     <!-- want to use Coquette Regular here -->
     <h2 id="shindig">Shindig</h2>
+    <p align="right"><button class"logout"><a href="/#logout">Log Out</a></button></p>
     <div class="small-12 large-12 column" id="log"></div>
   </div>
 
