--- a/app/assets/templates/register.hbs
+++ b/app/assets/templates/register.hbs
@@ -6,10 +6,10 @@
 	<form id="signupForm" action="/register" method="post">
 
 		<label for="name">First name</label><br>
-		<input class="shortInput" name="firstName" id="first_name" type="text"><br>
+		<input class="shortInput" name="firstName" id="firstName" type="text"><br>
 
 		<label for="name">Last name</label><br>
-		<input class="shortInput" name="lastName" id="last_name" type="text"><br>
+		<input class="shortInput" name="lastName" id="lastName" type="text"><br>
 
 		<label for="name">Display name</label><br>
 		<input class="shortInput" name="displayName" id="displayName" type="text"><br>
