--- a/app/assets/scss/_layout.scss
+++ b/app/assets/scss/_layout.scss
@@ -15,5 +15,9 @@ Layout styles
 .mainContent {
   width: 100%;
   height: 80%;
-  margin: 0px;
+}
+
+.innerContainer {
+  width: 100%;
+  height: 80%;
 }
