--- a/app/assets/scss/_layout.scss
+++ b/app/assets/scss/_layout.scss
@@ -1,19 +1,94 @@
-/*-------------------
-Layout styles
---------------------*/
-.container {
-  height: 100%;
-  width: 100%;
+
+@import "colors";
+$default-font-size: 16px !default;
+
+//Define responsive widths
+$BP2880: "min-width: 2880px";
+$BP2560: "min-width: 2560px";
+$BP1920: "min-width: 1920px";
+$BP1680: "min-width: 1680px";
+$BP1600: "min-width: 1600px";
+$BP1440: "min-width: 480px";
+$BP1366: "min-width: 1366px";
+$BP1280: "min-width: 1280px";
+$BP1136: "min-width: 1136px";
+$BP1024: "min-width: 1024px";
+$BP960: "min-width: 960px";
+$BP854: "min-width: 854px";
+$BP800: "min-width: 800px";
+$BP720: "min-width: 720px";
+$BP640: "min-width: 640px";
+$BP480: "min-width: 480px";
+$BP400: "min-width: 400px";
+$BP320: "min-width: 320px";
+
+//Define responsive height
+$BH1800: "min-height: 1800px";
+$BH1700: "min-height: 1700px";
+$BH1600: "min-height: 1600px";
+$BH1536: "min-height: 1536px";
+$BH1440: "min-height: 1440px";
+$BH1280: "min-height: 1280px";
+$BH1200: "min-height: 1200px";
+$BH1080: "min-height: 1080px";
+$BH1050: "min-height: 1050px";
+$BH1024: "min-height: 1024px";
+$BH900: "min-height: 900px";
+$BH800: "min-height: 800px";
+$BH768: "min-height:  768px";
+$BH720: "min-height: 720px";
+$BH640: "min-height: 640px";
+$BH600: "min-height: 600px";
+$BH540: "min-height: 540px";
+$BH480: "min-height: 480px";
+$BH360: "min-height: 360px";
+$BH320: "min-height: 320px";
+$BH240: "min-height: 240px";
+
+#banner{
+		height: 200px;
+	@media screen and (max-width: 320px) {
+		height: 40px;
+	}
+	@media screen and (min-width: 321px) and (max-width: 1000px){
+		height: 100px;
+	}
 }
 
-#banner {
-  width: 100%;
-  height: 65px;
-  margin: 0px;
+#shindig{
+		font-size: 10em;
+	@media screen and (max-width: 320px) {
+		font-size: 2em;
+	}
+	@media screen and (min-width: 321px) and (max-width: 1000px){
+		font-size: 5em;
+	}
+
 }
 
-.mainContent {
-  width: 100%;
-  height: 80%;
-  margin: 0px;
+	#aboutshindig{
+		font-size: 3em;
+		text-align: center;
+	@media screen and (max-width: 320px) {
+		font-size: 1em;
+	}
+	@media screen and (min-width: 321px) and (max-width: 1000px){
+		font-size: 2em;
+	}
+
+}
+
+
+	#loginBox{
+		height: 200px;
+  		width: 600px;
+	@media screen and (max-width: 320px) {
+		width: 200px;
+		height: 140px
+	}
+	@media screen and (min-width: 321px) and (max-width: 1000px){
+		width: 400px;
+		height: 180px;
+	}
+
 }
