--- a/app/assets/scss/styles.scss
+++ b/app/assets/scss/styles.scss
@@ -6,9 +6,9 @@ Base style sheet
 $Imports
 ------------------------------*/
 
-@import "../../../bower_components/foundation/scss/foundation/components/grid";
+//@import "../../../bower_components/foundation/scss/foundation/components/grid";
 @import "general.scss";
-@import "reset.scss";
+//@import "reset.scss";
 @import "layout.scss";
-@import "types.scss";
+//@import "types.scss";
 @import "app.scss";
