add interest checkboxes to create shindig view and store shindig's interests to db

--- a/app/assets/templates/createShindig.hbs
+++ b/app/assets/templates/createShindig.hbs
@@ -17,10 +17,19 @@
 		<label for="location">Where</label><br>
 		<input class="shortInput" name="location" id="location" type="text"><br>
 
+		<input type="checkbox" name="interest" value="hipster">Hipster<br>
+		<input type="checkbox" name="interest" value="outdoors">Outdoors<br>
+		<input type="checkbox" name="interest" value="geek">Geek<br>
+		<input type="checkbox" name="interest" value="music">Music<br>
+		<input type="checkbox" name="interest" value="gaming">Gaming<br>
+		<input type="checkbox" name="interest" value="sports">Sports<br>
+		<input type="checkbox" name="interest" value="drink">Drink<br>
+		<input type="checkbox" name="interest" value="pets">Pets<br>
+
 		<label for="description">Details</label><br>
 		<input class="shortInput" name="description" id="description" type="text"><br>
 
-		<button class="submit_button" type="submit" >Save Shindib</button>
+		<button class="submit_button" type="submit">Save Shindig</button>
 
 	</form>
 
