--- a/app/assets/scss/_app.scss
+++ b/app/assets/scss/_app.scss
@@ -3,10 +3,13 @@ App Specific Elements styles
 --------------------*/
 @import "colors";
 
-
 /*-------------------
 index
 --------------------*/
+body{
+  font-family: 'Shadows Into Light', cursive;
+}
+
 #description {
   text-align: center;
   margin-top: 5%;
@@ -17,7 +20,7 @@ index
 #loginBox {
   margin-left: auto;
   margin-right: auto;
-  
+
   border: 3px solid $brown;
   border-radius: 10px;
   background-color: $brown;
