--- a/app/assets/scss/_colors.scss
+++ b/app/assets/scss/_colors.scss
@@ -3,9 +3,9 @@ Colors
 --------------------*/
 
 $lightGreen: #2B9410;   // ADE0AB, 84cc81
-$green: #146101; //2F8F42, 2bab44
+$green: #58A644; //2F8F42, 2bab44
 $blue: #3631FF; // 2377fc
-$brown: #612301;
+$brown: #1C610A;
 $orange: #E0580E;
 $gray: #ccc9c4;
 
