Enhance shindig template

--- a/app/assets/scss/_app.scss
+++ b/app/assets/scss/_app.scss
@@ -17,7 +17,7 @@ index
 #loginBox {
   margin-left: auto;
   margin-right: auto;
-  
+
   border: 3px solid $brown;
   border-radius: 10px;
   background-color: $brown;
@@ -44,7 +44,7 @@ index
   margin-right: 22px;
 }
 
-.login_button {
+.loginButton {
   width: 150px;
   height: 25px;
   margin-left: 22px;
