--- a/app/assets/templates/shindig.hbs
+++ b/app/assets/templates/shindig.hbs
@@ -1,6 +1,13 @@
-<p class="title">{{title}}</p>
-<p class="owner">{{owner}}</p>
-<p class="date_time">{{date}} {{time}}</p>
-<p class="location">{{location}}</p>
-<p class="description">{{description}}</p>
-<p class="participants">{{participants}}</p>
+<div class="shindigDetails">
+  <p class="date">{{date}}, {{start_time}}-{{end_time}}</p>
+  <!-- <p class="time"></p> -->
+  <p class="title">{{title}}</p>
+  <p class="owner">{{owner}}</p>
+  <p class="location">{{location}}</p>
+  <p class="description">{{description}}</p>
+</div>
+<div class="icons">
+
+</div>
+<!-- <p class="participants">{{participants}}</p> -->
+
