--- a/app/assets/templates/createShindig.hbs
+++ b/app/assets/templates/createShindig.hbs
@@ -16,8 +16,15 @@
 
 		<label for="location">Where</label><br>
 		<input class="shortInput" name="location" id="location" type="text"><br>
-
-		<input type="checkbox" name="interest" value="hipster">Hipster<br>
+		
+		<label for="cbHipster" ><img src="Hipster-icon.png"><input type="checkbox" name="interest" id="cbHipster" value="hipster" >Hipster</label>
+		<label for="cbOutdoors" ><img src="Outdoors-icon.png"><input type="checkbox" name="interest" id="cbOutdoors" value="outdoors" >Outdoors</label>
+		<label for="cbGeek" ><input type="checkbox" name="interest" id="cbGeek" value="geek" >Geek<br><img src="Geek-icon.png"></label>
+		<label for="cbMusic" ><input type="checkbox" name="interest" id="cbMusic" value="music" >Music<br><img src="Music-icon.png"></label>
+		<label for="cbGaming" ><input type="checkbox" name="interest" id="cbGaming" value="gaming" >Gaming<br><img src="Gaming-icon.png"></label>
+		<label for="cbSports" ><input type="checkbox" name="interest" id="cbSports" value="sports" >Sports<br><img src="Sports-icon.png"></label>
+		<label for="cbDrink" ><input type="checkbox" name="interest" id="cbDrink" value="drink" >Drink<br><img src="Refreshment-icon.png"></label>
+		<label for="cbPets" ><input type="checkbox" name="interest" id="cbPets" value="pets" >Pets<br><img src="Pet-icon.png"></label>
 		<input type="checkbox" name="interest" value="outdoors">Outdoors<br>
 		<input type="checkbox" name="interest" value="geek">Geek<br>
 		<input type="checkbox" name="interest" value="music">Music<br>
