--- a/app/assets/scss/_layout.scss
+++ b/app/assets/scss/_layout.scss
@@ -48,13 +48,13 @@ $BH240: "min-height: 240px";
 .container{
 		background-image: url('../summer-tree.png');
 	@media screen and (max-width: 320px) {
-		height: 40px;
+		background-image: url('../summer-tree300.png');
 	}
 	@media screen and (min-width: 321px) and (max-width: 800px){
-		height: 100px;
+		background-image: url('../summer-tree800.png');
 	}
 	@media screen and (min-width: 801px) and (max-width: 1000px){
-		height: 150px;
+		background-image: url('../summer-tree.png');
 	}
 }
 
