add colors and center register form

--- a/app/assets/scss/_register.scss
+++ b/app/assets/scss/_register.scss
@@ -3,5 +3,8 @@
 }
 
 .formBox {
-  background-color: white;
+  background-color: #5BAB33;
+  border: 2px solid black;
+  border-left: none;
+  border-right: none;
 }
