--- a/app/assets/templates/register.hbs
+++ b/app/assets/templates/register.hbs
@@ -51,7 +51,7 @@
         <input type="radio" name="interest4" value="music">No
       </li>
       </ul>
-      <button type="submit" class="button_register buttonRegister">Register</button>
+
 </div>
 <div class="medium-4 column">
   <ul>
@@ -79,6 +79,9 @@
       </li>
 	</ul>
 
+</div>
+<div class="medium-12 column">
+  <button type="submit" class="button_register buttonRegister">Register</button>
 </div>
 
 
