--- a/app/assets/templates/createShindig.hbs
+++ b/app/assets/templates/createShindig.hbs
@@ -1,7 +1,7 @@
-<div class="small-12 column">
+<div class="formBox medium-12 column">
 
 	<form id="signupForm" action="/saveshindig" method="post">
-
+	<div class="formTexts medium-4 column">
 		<label for="title">Title</label><br>
 		<input class="newshindig" name="title" id="title" type="text"><br>
 
@@ -16,28 +16,25 @@
 
 		<label for="location">Where</label><br>
 		<input class="shortInput" name="location" id="location" type="text"><br>
-		
-		<label for="cbHipster" ><img src="Hipster-icon.png"><input type="checkbox" name="interest" id="cbHipster" value="hipster" >Hipster</label>
-		<label for="cbOutdoors" ><img src="Outdoors-icon.png"><input type="checkbox" name="interest" id="cbOutdoors" value="outdoors" >Outdoors</label>
-		<label for="cbGeek" ><input type="checkbox" name="interest" id="cbGeek" value="geek" >Geek<br><img src="Geek-icon.png"></label>
-		<label for="cbMusic" ><input type="checkbox" name="interest" id="cbMusic" value="music" >Music<br><img src="Music-icon.png"></label>
-		<label for="cbGaming" ><input type="checkbox" name="interest" id="cbGaming" value="gaming" >Gaming<br><img src="Gaming-icon.png"></label>
-		<label for="cbSports" ><input type="checkbox" name="interest" id="cbSports" value="sports" >Sports<br><img src="Sports-icon.png"></label>
-		<label for="cbDrink" ><input type="checkbox" name="interest" id="cbDrink" value="drink" >Drink<br><img src="Refreshment-icon.png"></label>
-		<label for="cbPets" ><input type="checkbox" name="interest" id="cbPets" value="pets" >Pets<br><img src="Pet-icon.png"></label>
-		<input type="checkbox" name="interest" value="outdoors">Outdoors<br>
-		<input type="checkbox" name="interest" value="geek">Geek<br>
-		<input type="checkbox" name="interest" value="music">Music<br>
-		<input type="checkbox" name="interest" value="gaming">Gaming<br>
-		<input type="checkbox" name="interest" value="sports">Sports<br>
-		<input type="checkbox" name="interest" value="drink">Drink<br>
-		<input type="checkbox" name="interest" value="pets">Pets<br>
+	</div>
+	<div class="medium-4 column">
+		<label for="cbHipster"><img src="Hipster-icon.png"><input type="checkbox" name="interest" id="cbHipster" value="hipster" >Hipster</label><br>
+		<label for="cbOutdoors"><img src="Outdoors-icon.png"><input type="checkbox" name="interest" id="cbOutdoors" value="outdoors" >Outdoors</label><br>
+		<label for="cbGeek"><img src="Geek-icon.png"><input type="checkbox" name="interest" id="cbGeek" value="geek">Geek</label><br>
+		<label for="cbMusic"><img src="Music-icon.png"><input type="checkbox" name="interest" id="cbMusic" value="music">Music</label>
+	</div>
+	<div class="medium-4 column">
+		<label for="cbGaming"><img src="Gaming-icon.png"><input type="checkbox" name="interest" id="cbGaming" value="gaming" >Gaming</label><br>
+		<label for="cbSports"><img src="Sports-icon.png"><input type="checkbox" name="interest" id="cbSports" value="sports" >Sports</label><br>
+		<label for="cbDrink"><img src="Refreshment-icon.png"><input type="checkbox" name="interest" id="cbDrink" value="drink" >Drink</label><br>
+		<label for="cbPets"><img src="Pet-icon.png"><input type="checkbox" name="interest" id="cbPets" value="pets">Pets</label>
+	</div>
 
-		<label for="description">Details</label><br>
-		<input class="shortInput" name="description" id="description" type="text"><br>
+		<label for="description">Details</label>
+		<input class="shortInput" name="description" id="description" type="textarea" rows="4" cols="50"><br>
 
 		<button class="submit_button" type="submit">Save Shindig</button>
-
+</div>
 	</form>
 
 
