improve create a shindig view

--- a/app/assets/templates/createShindig.hbs
+++ b/app/assets/templates/createShindig.hbs
@@ -18,20 +18,21 @@
 		<input class="shortInput" name="location" id="location" type="text"><br>
 	</div>
 	<div class="medium-4 column">
-		<label for="cbHipster"><img src="Hipster-icon.png"><input type="checkbox" name="interest" id="cbHipster" value="hipster" >Hipster</label><br>
-		<label for="cbOutdoors"><img src="Outdoors-icon.png"><input type="checkbox" name="interest" id="cbOutdoors" value="outdoors" >Outdoors</label><br>
-		<label for="cbGeek"><img src="Geek-icon.png"><input type="checkbox" name="interest" id="cbGeek" value="geek">Geek</label><br>
-		<label for="cbMusic"><img src="Music-icon.png"><input type="checkbox" name="interest" id="cbMusic" value="music">Music</label>
+	<label for="description">Details</label>
+		<textarea class="shortInput" name="description" id="description" type="textarea" rows="4" cols="50"></textarea>
 	</div>
-	<div class="medium-4 column">
-		<label for="cbGaming"><img src="Gaming-icon.png"><input type="checkbox" name="interest" id="cbGaming" value="gaming" >Gaming</label><br>
-		<label for="cbSports"><img src="Sports-icon.png"><input type="checkbox" name="interest" id="cbSports" value="sports" >Sports</label><br>
-		<label for="cbDrink"><img src="Refreshment-icon.png"><input type="checkbox" name="interest" id="cbDrink" value="drink" >Drink</label><br>
-		<label for="cbPets"><img src="Pet-icon.png"><input type="checkbox" name="interest" id="cbPets" value="pets">Pets</label>
+	<div class="createInterests medium-8 column">
+		<label for="cbHipster"><img src="Hipster-icon.png"><br><input type="checkbox" name="interest" id="cbHipster" value="hipster" >Hipster</label>
+		<label for="cbOutdoors"><img src="Outdoors-icon.png"><br><input type="checkbox" name="interest" id="cbOutdoors" value="outdoors" >Outdoors</label>
+		<label for="cbGeek"><img src="Geek-icon.png"><br><input type="checkbox" name="interest" id="cbGeek" value="geek">Geek</label>
+		<label for="cbMusic"><img src="Music-icon.png"><br><input type="checkbox" name="interest" id="cbMusic" value="music">Music</label>
+		<label for="cbGaming"><img src="Gaming-icon.png"><br><input type="checkbox" name="interest" id="cbGaming" value="gaming" >Gaming</label>
+		<label for="cbSports"><img src="Sports-icon.png"><br><input type="checkbox" name="interest" id="cbSports" value="sports" >Sports</label>
+		<label for="cbDrink"><img src="Refreshment-icon.png"><br><input type="checkbox" name="interest" id="cbDrink" value="drink" >Drink</label>
+		<label for="cbPets"><img src="Pet-icon.png"><br><input type="checkbox" name="interest" id="cbPets" value="pets">Pets</label>
 	</div>
 
-		<label for="description">Details</label>
-		<input class="shortInput" name="description" id="description" type="textarea" rows="4" cols="50"><br>
+
 
 		<button class="submit_button" type="submit">Save Shindig</button>
 </div>
