--- a/app/assets/templates/createShindig.hbs
+++ b/app/assets/templates/createShindig.hbs
@@ -19,7 +19,7 @@
 	</div>
 	<div class="medium-4 column">
 	<label for="description">Details</label>
-		<textarea class="shortInput" name="description" id="description" type="textarea" rows="4" cols="50"></textarea>
+		<textarea class="shortInput" name="description" id="description" type="textarea" rows="4" cols="40"></textarea>
 	</div>
 	<div class="createInterests medium-8 column">
 		<label for="cbHipster"><img src="Hipster-icon.png"><br><input type="checkbox" name="interest" id="cbHipster" value="hipster" >Hipster</label>
@@ -33,8 +33,9 @@
 	</div>
 
 
-
-		<button class="submit_button" type="submit">Save Shindig</button>
+	<div class="medium-8 column">
+		<button class="buttonCreate submit_button" type="submit">Save Shindig</button>
+	</div>
 </div>
 	</form>
 
