add correct size for text area on create shindig view

--- a/app/assets/scss/_create.scss
+++ b/app/assets/scss/_create.scss
@@ -30,6 +30,8 @@
     cursor: hand;
 }
 
-// @media (max-width: 700px) {
-
-// }
+@media (max-width: 700px) {
+  #description {
+    width: 100%;
+  }
+}
