make description save to db

--- a/app/assets/templates/createShindig.hbs
+++ b/app/assets/templates/createShindig.hbs
@@ -19,7 +19,7 @@
 	</div>
 	<div class="medium-4 column">
 	<label for="description">Details</label>
-		<textarea class="shortInput" name="description" id="description" type="textarea" rows="4" cols="40"></textarea>
+		<textarea form="signupForm" class="shortInput" name="description" id="description" type="textarea" rows="4" cols="40"></textarea>
 	</div>
 	<div class="createInterests medium-8 column">
 		<label for="cbHipster"><img src="Hipster-icon.png"><br><input type="checkbox" name="interest" id="cbHipster" value="hipster" >Hipster</label>
