--- a/app/assets/scss/_layout.scss
+++ b/app/assets/scss/_layout.scss
@@ -2,48 +2,7 @@
 @import "colors";
 $default-font-size: 16px !default;
 
-//Define responsive widths
-$BP2880: "min-width: 2880px";
-$BP2560: "min-width: 2560px";
-$BP1920: "min-width: 1920px";
-$BP1680: "min-width: 1680px";
-$BP1600: "min-width: 1600px";
-$BP1440: "min-width: 480px";
-$BP1366: "min-width: 1366px";
-$BP1280: "min-width: 1280px";
-$BP1136: "min-width: 1136px";
-$BP1024: "min-width: 1024px";
-$BP960: "min-width: 960px";
-$BP854: "min-width: 854px";
-$BP800: "min-width: 800px";
-$BP720: "min-width: 720px";
-$BP640: "min-width: 640px";
-$BP480: "min-width: 480px";
-$BP400: "min-width: 400px";
-$BP320: "min-width: 320px";
 
-//Define responsive height
-$BH1800: "min-height: 1800px";
-$BH1700: "min-height: 1700px";
-$BH1600: "min-height: 1600px";
-$BH1536: "min-height: 1536px";
-$BH1440: "min-height: 1440px";
-$BH1280: "min-height: 1280px";
-$BH1200: "min-height: 1200px";
-$BH1080: "min-height: 1080px";
-$BH1050: "min-height: 1050px";
-$BH1024: "min-height: 1024px";
-$BH900: "min-height: 900px";
-$BH800: "min-height: 800px";
-$BH768: "min-height:  768px";
-$BH720: "min-height: 720px";
-$BH640: "min-height: 640px";
-$BH600: "min-height: 600px";
-$BH540: "min-height: 540px";
-$BH480: "min-height: 480px";
-$BH360: "min-height: 360px";
-$BH320: "min-height: 320px";
-$BH240: "min-height: 240px";
 
 body{
 		background-image: url('../summer-tree2.png');
@@ -111,54 +70,82 @@ body{
 		width: 600px;
 		height: 150px;
 	@media screen and (max-width: 320px) {
-		width: 200px;
+		width: 100px;
 		height: 130px
 	}
-	@media screen and (min-width: 321px) and (max-width: 800px){
+	@media screen and (min-width: 400px) and (max-width: 800px){
 		width: 300px;
 		height: 150px;
 	}
-	@media screen and (min-width: 801px) and (max-width: 1000px){
+	@media screen and (min-width: 601px) and (max-width: 800px){
 		width: 500px;
 		height: 180px;
 	}
 }
 
-	#loginEmail {
- 
-  float: left;
-  margin-top: 30px;
-  font-size: 28px;
-}
-	#loginBox:input{
-		width: 250px;
- 		height: 30px;
+	#loginInput{
+		margin-top: 70px;
+		background-color: red;
+		width:500px;
 	}
 
-	#loginPassword {
-  //width: 250px;
- // height: 30px;
-  float: right;
-  margin-top: 30px;
-  font-size: 28px;
-}
+	#password {
+  	float:right;
+	}
 	
+	#email {
+  	float:left;
+	}
+
+	#joinBtn{
+		//background: transparent;
+    	border: none;
+    	font-size:0;
+    	float:left;
+	}
+
+	#loginBtn{
+		//background: transparent;
+    	border: none;
+    	font-size:0;
+    	float:right;
+	}
+
 	#joinImg{
-	float: left;
-	margin-left: 20px;
-}
+		background-image: url('../Join.png');
+		height:100px;
+		width:100px;
+		background-repeat: no-repeat;
+		background-position-x: center;
+		
+	}
 
 	#loginImg{
-	float:right;
-	margin-right: 20px;
-}
+		background-image: url('../Go.png');
+		height:100px;
+		width:100px;
+		background-repeat: no-repeat;
+		background-position-x: center;
+		
+	}
+
 
 	#signIn{
 		font-size: 35px;
-		width:100px;
-		height:40px;
+		width:375px;
+		height:60px;
 		float:left;
-		margin-left: 125px;
+		text-align:center;
+		background-color:orange;
+		//margin-left: 100px;
+		@media screen and (min-width: 200px) and (max-width: 600px){
+		//margin-left:5;
+		font-size: 25px;
+		}
+		@media screen and (max-width: 1000px){
+			//margin-left: 60px;
+			
+		}
 	}
 
 
