--- a/app/assets/scss/_layout.scss
+++ b/app/assets/scss/_layout.scss
@@ -48,7 +48,7 @@ body{
 		font-size: 2em;
 	}
 	@media screen and (min-width: 801px) and (max-width: 1000px){
-		font-size: 20px;
+		//font-size: 20px;
 	}
 
 }
@@ -73,7 +73,7 @@ body{
 		width: 100px;
 		height: 130px
 	}
-	@media screen and (min-width: 400px) and (max-width: 800px){
+	@media screen and (min-width: 321px) and (max-width: 800px){
 		width: 300px;
 		height: 150px;
 	}
@@ -82,11 +82,22 @@ body{
 		height: 180px;
 	}
 }
-
+	//email and password input
 	#loginInput{
 		margin-top: 70px;
 		background-color: red;
 		width:500px;
+		height: 25px;
+		@media screen and (min-width: 400px) and (max-width: 800px){
+			width: 175px;
+			height: 50px;
+			margin-left: 60px;
+		}
+		@media screen and (min-width: 601px) and (max-width: 800px){
+			width:400px;
+			margin-top: 110px;
+			margin-left: 50px;
+		}
 	}
 
 	#password {
@@ -117,6 +128,12 @@ body{
 		width:100px;
 		background-repeat: no-repeat;
 		background-position-x: center;
+		@media screen and (min-width: 400px) and (max-width: 600px){
+			background-image: url('../Join-50.png');
+			height:60px;
+			width:60px;
+			//:hover: url('../JoinHoverClick-50.png');
+		}
 		
 	}
 
@@ -126,6 +143,11 @@ body{
 		width:100px;
 		background-repeat: no-repeat;
 		background-position-x: center;
+		@media screen and (min-width: 400px) and (max-width: 600px){
+			background-image: url('../Go-50.png');
+			height:60px;
+			width:60px;
+		}
 		
 	}
 
@@ -137,14 +159,17 @@ body{
 		float:left;
 		text-align:center;
 		background-color:orange;
-		//margin-left: 100px;
-		@media screen and (min-width: 200px) and (max-width: 600px){
-		//margin-left:5;
-		font-size: 25px;
+		/*@media screen and (max-width: 425px) {
+			width:50;
 		}
-		@media screen and (max-width: 1000px){
-			//margin-left: 60px;
-			
+		@media screen and (min-width: 426px) and (max-width: 450px){
+			width:50;
+		}*/
+		@media screen and (min-width: 400px) and (max-width: 600px){
+			width:150px;
+		}
+		@media screen and (min-width: 601px) and (max-width: 800px){
+			width:275px;
 		}
 	}
 
